Added an option to have the year be a span tag

--- a/src/style/flatpickr.styl
+++ b/src/style/flatpickr.styl
@@ -334,6 +334,16 @@
     span.arrowDown:after
       border-top-color $monthForeground
 
+  span.cur-year
+    margin-left 0.5ch
+    font-size inherit
+    font-family inherit
+    font-weight 300
+    line-height inherit
+
+    &:hover
+      background: alpha($invertedBg, 0.05)
+
   input.cur-year
     background transparent
     box-sizing border-box
